--- a/templates/home/privacy-policy.html
+++ b/templates/home/privacy-policy.html
@@ -15,100 +15,82 @@
     <h2>{% trans 'PRIVACY POLICY' %}</h2>
 
     <p>
-        {% trans 'This Privacy Policy establishes the terms in which "Katy Shop 303" uses and protects the information
+        {% blocktrans %}This Privacy Policy establishes the terms in which "Katy Shop 303" uses and protects the information
         what is provided by its users when using its website. This company is committed to security
         of the data of its users. When we ask you to complete the personal information fields with which you
         can be identified, we do so by ensuring that it will only be used in accordance with the terms of this
         document. However, this Privacy Policy may change over time or be updated, so we
         We recommend and emphasize that you continually review this page to ensure that you agree with such
-        changes.' %} 
+        changes.{% endblocktrans %} 
     </p>
 
     <h3>{% trans 'Information that is collected' %}</h3>
     
     <p>
-        {% trans 'Our website may collect personal information such as: Name, contact information such as your address
+        {% blocktrans%}Our website may collect personal information such as: Name, contact information such as your address
         email address and demographic information. Likewise, when necessary, information may be requested
-        specific to process an order or make a delivery or billing.' %}
+        specific to process an order or make a delivery or billing.{% endblocktrans %}
     </p>
 
     <h3>{% trans 'Use of information collected' %}</h3>
     
     <p>
-        {% trans 'Our website uses the information to provide the best possible service, particularly to maintain
+        {% blocktrans %}Our website uses the information to provide the best possible service, particularly to maintain
         a user registry, of orders if applicable, and to improve our products and services. It is possible that
         emails are sent periodically through our site with special offers, new products and
         other advertising information that we consider relevant to you or that may provide you with some benefit, these
-        Emails will be sent to the address you provide and may be canceled at any time.' %}
+        Emails will be sent to the address you provide and may be canceled at any time.{% endblocktrans %}
     </p>
     
     <h3>{% trans 'What are cookies?' %}</h3>
     
     <p>
-        {% trans 'A cookie is a file that is downloaded to your computer when accessing certain web pages. The cookies
+        {% blocktrans %}A cookie is a file that is downloaded to your computer when accessing certain web pages. The cookies
         allow a web page, among other things, to store and retrieve information about the browsing habits of a
         user or your computer, and depending on the information they contain and how you use your computer, they may be used to
-        recognize the user.' %}
+        recognize the user.{% endblocktrans %}
     </p>
 
     <h3>{% trans 'What types of cookies does this website use?' %}</h3>
 
     <p>
         {% trans 'This website uses the following types of cookies:' %}<br>
-        <strong>{% trans 'Analysis cookies:' %}</strong> {% trans 'Those that, well treated by us or by third parties, allow us to quantify the number of
+        <strong>{% trans 'Analysis cookies:' %}</strong> {% blocktrans %}Those that, well treated by us or by third parties, allow us to quantify the number of
         users and thus carry out the measurement and statistical analysis of the use made by users of the service
         offered. To do this, your browsing on our website is analyzed in order to improve the offer of products or
-        services we offer you.' %}<br><br>
+        services we offer you.{% endblocktrans %}<br><br>
 
-        <strong>{% trans 'Technical cookies:' %}</strong> {% trans 'They are those that allow the user to navigate through the restricted area and use its different
-        functions such as, for example, carrying out the process of purchasing an item.' %}<br><br>
+        <strong>{% trans 'Technical cookies:' %}</strong> {% blocktrans %}They are those that allow the user to navigate through the restricted area and use its different
+        functions such as, for example, carrying out the process of purchasing an item.{% endblocktrans %}<br><br>
 
-        <strong>{% trans 'Personalization cookies:' %}</strong> {% trans 'They are those that allow the user to access the service with some characteristics of
+        <strong>{% trans 'Personalization cookies:' %}</strong> {% blocktrans %}They are those that allow the user to access the service with some characteristics of
         general character predefined based on a series of criteria in the user's terminal, such as
-        They would be the language or the type of browser through which you connect to the service. Service.' %}<br><br>
+        They would be the language or the type of browser through which you connect to the service. Service.{% endblocktrans %}<br><br>
     </p>
 
     <h3>{% trans 'What are cookies?' %}</h3>
 
     <p>
-        {% trans 'A cookie is a file that is downloaded to your computer when accessing certain web pages. Cookies allow
+        {% blocktrans %}A cookie is a file that is downloaded to your computer when accessing certain web pages. Cookies allow
         that a web page, among other things, stores and retrieves information about the browsing habits of a user
         or your computer, and depending on the information they contain and how you use your computer, they may be used to
-        recognize the user.' %}
-    </p>
-
-    <h3>{% trans 'What types of cookies does this website use?' %}</h3>
-
-    <p>
-        {% trans 'This website uses the following types of cookies:
-
-        Analysis cookies: Those that are well processed by us or by third parties, allow us to quantify the number of
-        users and thus carry out the measurement and statistical analysis of the use made by users of the service
-        offered. To do this, your browsing on our website is analyzed in order to improve the offer of products or
-        services we offer you.
-
-        Technical cookies: These are those that allow the user to navigate through the restricted area and use its different
-        functions such as, for example, carrying out the process of purchasing an item.
-
-        Personalization cookies: These are those that allow the user to access the service with some characteristics of
-        general character predefined based on a series of criteria in the user's terminal, such as
-        They would be the language or the type of browser through which you connect to the service.' %}
+        recognize the user.{% endblocktrans %}
     </p>
 
     <h3>{% trans 'Disable cookies' %}</h3>
 
     <p>
-        {% trans 'You can allow, block or eliminate the cookies installed on your computer by configuring the options
+        {% blocktrans %}You can allow, block or eliminate the cookies installed on your computer by configuring the options
         of the browser installed on your computer.
 
         Most web browsers offer the ability to allow, block or delete cookies.
-        installed on your computer.' %}
+        installed on your computer.{% endblocktrans %}
     </p>
     
     <h3>{% trans 'Third party cookies' %}</h3>
 
     <p>
-        {% trans 'This website uses third-party services to collect information for statistical and site usage purposes.
+        {% blocktrans %}This website uses third-party services to collect information for statistical and site usage purposes.
         Web. DoubleClick cookies are used to improve the advertising included on the website. Are used to
         target advertising according to content that is relevant to a user, thus improving the quality of the
         experience in using it.
@@ -118,22 +100,22 @@
         integrated.
 
         Our site includes other features provided by third parties. You can easily share the content on networks
-        social networks such as Facebook, Twitter or Google +, with the buttons that we have included for this purpose.' %}
+        social networks such as Facebook, Twitter or Google +, with the buttons that we have included for this purpose.{% endblocktrans %}
     </p>
 
     <h3>{% trans 'Warning about the deletion of cookies.' %}</h3>
 
     <p>
-        {% trans 'You can delete and block all cookies on this site, but some of the site will not work or the quality of the site
-        website may be affected.<br>
+        {% blocktrans %}You can delete and block all cookies on this site, but some of the site will not work or the quality of the site
+        website may be affected.{% endblocktrans %}<br>
 
-        If you have any questions about our cookie policy, you can contact this website through our
-        Contact channels.<br>
+        {% blocktrans %}If you have any questions about our cookie policy, you can contact this website through our
+        Contact channels.{% endblocktrans %}<br>
 
-        This company will not sell, assign or distribute personal information that is collected without your consent, except
-        that is required by a judge with a court order.<br>
+        {% blocktrans %}This company will not sell, assign or distribute personal information that is collected without your consent, except
+        that is required by a judge with a court order.{% endblocktrans %}<br><br>
 
-        “Katy Shop 303” reserves the right to change the terms of this Privacy Policy at any time.<br>' %}
+        {% trans '“Katy Shop 303” reserves the right to change the terms of this Privacy Policy at any time.' %}<br>
     </p>
 </div>
 
