--- a/templates/product/category.html
+++ b/templates/product/category.html
@@ -16,7 +16,7 @@
     <!-- Title Category -->
     <!--Products of store-->
     <div class="container-fluid mt-3 d-flex flex-column align-content-center row-gap-3">
-        <h2 class="title-category">{% trans 'Categoria:' %} {{ category.name }}</h2>
+        <h2 class="title-category">{% trans 'Category' %}: {{ category.name }}</h2>
         {% for product in products %}
         {% if product.active %}
         <div class="card d-flex flex-row align-items-center border-info border-2">
@@ -31,7 +31,7 @@
                 <a class="link-title-product" href="{% url 'product_app:product' product.slug %}">{{ product.name }}</a>
                 <p class="card-subtitle"><strong>${{ product.price }}</strong></p>
                 {% if product.stock == True and product.amount_stock > 0 %}
-                <p class="stock-store">{% blocktrans %}{{ product.amount_stock }} left in stock{% endblocktrans %}</p>
+                <p class="stock-store">{% blocktrans with amount_stock=product.amount_stock %}{{ amount_stock }} left in stock{% endblocktrans %}</p>
                 <a href="{% url 'cart_app:add_cart' product.id %}" class="btn-add-cart btn btn-primary">{% trans 'Add to cart' %}</a>
                 {% elif product.stock == True %}
                 <p class="stock-store">{% trans 'In stock' %}</p>
@@ -55,9 +55,7 @@
                 
                 {% if products.number > 0 %}
                 <span class="current-pages">
-                    {% blocktrans %}
-                    Page {{ products.number }} of {{ products.paginator.num_pages }}
-                    {% endblocktrans %}
+                    {% blocktrans with current_page=products.number num_pages=products.paginator.num_pages %}Page {{ current_page }} of {{ num_pages }}{% endblocktrans %}
                 </span>
                 {% else %}
                 <span class="current-pages">
