--- a/templates/user/forgot-password.html
+++ b/templates/user/forgot-password.html
@@ -21,7 +21,7 @@
             {{form.email}}</label>
 
 
-        <input class="form-register__input-submit" type="submit" value="Recover account">
+        <input class="form-register__input-submit" type="submit" value="{% trans 'Recover account' %}">
     </form>
 </div class="container-form">
 
