--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -38,7 +38,7 @@
         <input class="form-register__input-submit" type="submit">
     
         <div class="form__container-2">
-            <p>{% trans 'You do not have an account?' %} <a href="{% url 'user_app:user_register' %}">{% trans 'Sign in' %}</a></p>
+            <p>{% trans 'You do not have an account?' %} <a href="{% url 'user_app:user_register' %}">{% trans 'Sign up' %}</a></p>
         </div>
 
         <div class="form__container-2">
