--- a/templates/home/terms.html
+++ b/templates/home/terms.html
@@ -19,7 +19,7 @@
     <h2>{% trans 'GENERAL INFORMATION' %}</h2>
 
     <p>
-        {% trans 'This website is operated by Katy Shop 303. Throughout the site, the terms "we", "us" and "our" affect
+        {% blocktrans %}This website is operated by Katy Shop 303. Throughout the site, the terms "we", "us" and "our" affect
         Katy Shop 303. Katy Shop 303 offers this website, including all information, tools and Services
         available to you on this site, the user, is conditioned on your acceptance of all terms,
         conditions, policies and notifications established here.<br><br>
@@ -40,13 +40,13 @@
         We reserve the right to update, change or replace any part of the Terms of Service by
         posting updates and/or changes to our website. It is your responsibility to review this page for
         verify the changes. Your continued use of or access to the Website following the posting of any changes
-        constitutes acceptance of such changes.' %}<br>
+        constitutes acceptance of such changes.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 1 - ONLINE STORE TERMS' %}</h3>
 
     <p>
-        {% trans 'By using this site, you represent that you are the age of majority in your state or province of residence, or that you are over
+        {% blocktrans %}By using this site, you represent that you are the age of majority in your state or province of residence, or that you are over
         age in your state or province of residence and that you have given us your consent to allow any of your
         dependent minors use this site.<br><br>
 
@@ -55,13 +55,13 @@
 
         You must not transmit worms, viruses or any code of a destructive nature.<br><br>
 
-        A breach or violation of any of these Terms will result in immediate termination of your Services.' %}<br>
+        A breach or violation of any of these Terms will result in immediate termination of your Services.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 2 - GENERAL CONDITIONS' %}</h3>
 
     <p>
-        {% trans 'We reserve the right to refuse service to anyone, for any reason, at any time.<br><br>
+        {% blocktrans %}We reserve the right to refuse service to anyone, for any reason, at any time.<br><br>
 
         Credit card information is always encrypted during transfer over networks.<br><br>
 
@@ -69,52 +69,52 @@
         Service or access to the Service or any contact on the website through which the service is provided, without
         express written permission. Of us.<br><br>
 
-        Headings used in this agreement are included for convenience only and do not limit or affect these Terms.' %}<br>
+        Headings used in this agreement are included for convenience only and do not limit or affect these Terms.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 3 - CHANGES TO THE SERVICE AND PRICES' %}</h3>
 
     <p>
-        {% trans 'The prices of our products are subject to change without prior notice.<br><br>
+        {% blocktrans %}The prices of our products are subject to change without prior notice.<br><br>
 
         We reserve the right to modify or discontinue the Service (or any part of the content) at any
         time without notice.<br><br>
 
         We will not be liable to you or any third party for any modification, price change, suspension or
-        discontinuity of the Service.' %}<br>
+        discontinuity of the Service.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 4 - REFUNDS AND RETURNS' %}</h3>
 
     <p>
-        {% trans 'Due to the fact that in previous stores many consumers made orders and returned them very often for pleasure or for
-        For any other reason, Katy Shop 303 will not accept refunds or returns of any kind.' %}<br>
+        {% blocktrans %}Due to the fact that in previous stores many consumers made orders and returned them very often for pleasure or for
+        For any other reason, Katy Shop 303 will not accept refunds or returns of any kind.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 5 - PRODUCTS OR SERVICES (if applicable)' %}</h3>
 
     <p>
-        {% trans 'Certain products or services may be available exclusively online through the Website. These
-        products or services may have limited quantities.
+        {% blocktrans %}Certain products or services may be available exclusively online through the Website. These
+        products or services may have limited quantities.<br><br>
 
         We have made an effort to display the colors and images of our products, in the store, as accurately as possible.
-        possible. We cannot guarantee that your computer monitor will display colors exactly.
+        possible. We cannot guarantee that your computer monitor will display colors exactly.<br><br>
 
         We reserve the right, but are not obligated, to limit the sales of our products or services to
         any person, geographic region or jurisdiction. We can exercise this right on a case-by-case basis. Us
         we reserve the right to limit the quantities of products or services we offer. all descriptions
         of products or prices of products are subject to change, at any time, without prior notice, at
         our sole discretion. We reserve the right to discontinue any product at any
-        moment. Any product or service offer made on this site is void where prohibited.
+        moment. Any product or service offer made on this site is void where prohibited.<br><br>
 
         We do not warrant that the quality of any products, services, information or other material purchased or obtained by
-        you meet your expectations.' %}
+        you meet your expectations.{% endblocktrans %}
     </p>
 
     <h3>{% trans 'SECTION 6: ACCURACY OF BILLING AND ACCOUNT INFORMATION' %}</h3>
 
     <p>
-        {% trans 'We reserve the right to refuse any order you place with us. We may, at our discretion,
+        {% blocktrans %}We reserve the right to refuse any order you place with us. We may, at our discretion,
         limit or cancel the quantities purchased per person, per household or per order. These restrictions may include
         orders placed by or under the same customer account, the same credit card and/or orders using the
         same billing and/or shipping address.<br><br>
@@ -127,13 +127,13 @@
         You agree to provide current, complete, and accurate information about the purchase and the account used for all
         purchases made in our store. You agree to promptly update your account and other information, including your
         email address and credit card numbers and expiration dates, so that we can complete
-        your transactions and communicate with you when necessary.' %}<br>
+        your transactions and communicate with you when necessary.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 7 - OPTIONAL TOOLS' %}</h3>
 
     <p>
-        {% trans 'We may provide you with access to third-party tools that we do not monitor and over which we have no control or
+        {% blocktrans %}We may provide you with access to third-party tools that we do not monitor and over which we have no control or
         entrance.<br><br>
 
         You acknowledge and agree that we provide access to such tools "as is" and "as available" without
@@ -146,31 +146,31 @@
 
         We may also offer you new services and/or features through the Website in the future (including
         the release of new tools and resources). These new features and/or services will also be
-        subject to these Terms of Service.' %}<br>
+        subject to these Terms of Service.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 8 - PERSONAL INFORMATION' %}</h3>
 
     <p>
-        {% trans 'Your submission of personal information through the site is governed by our Privacy Policy. To see
-        our Privacy Policy.' %}<br>
+        {% blocktrans %}Your submission of personal information through the site is governed by our Privacy Policy. To see
+        our Privacy Policy.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 9 - ERRORS, INACCURACIES AND OMISSIONS' %}</h3>
 
     <p>
-        {% trans 'From time to time there may be information on our site or in the Service that contains typographical errors,
+        {% blocktrans %}From time to time there may be information on our site or in the Service that contains typographical errors,
         inaccuracies or omissions that may relate to product descriptions, prices, promotions,
         offers, product shipping costs, transit time and availability. We reserve the right to correct
         errors, inaccuracies or omissions and to change or update information or cancel orders if any information in
         the Service or any related website is inaccurate at any time, without notice (including after
-        of having sent your order)' %}.<br>
+        of having sent your order){% endblocktrans %}.<br>
     </p>
 
     <h3>{% trans 'SECTION 10 - PROHIBITED USES' %}</h3>
 
     <p>
-        {% trans 'In addition to other prohibitions set forth in the Terms of Service, use of the Site or its content is
+        {% blocktrans %}In addition to other prohibitions set forth in the Terms of Service, use of the Site or its content is
         prohibited: (a) for any unlawful purpose; (b) solicit others to perform or participate in illegal acts; (c)
         to violate any international, federal, provincial or state regulations, rules, laws, or ordinances
         local; (d) to infringe or violate the intellectual property right of us or of third parties; (e) harass,
@@ -182,13 +182,13 @@
         spam, phish, pharm, pretext, spider, crawl or scrape; (j) for any obscene or immoral purpose; or (k) for
         interfere with or circumvent the security features of the Service or any related website, other sites or
         Internet. We reserve the right to terminate your use of the Service or any related website for violating
-        any of the items prohibited use.' %}<br>
+        any of the items prohibited use.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'ARTICLE 11 - EXCLUSION OF WARRANTIES; LIMITATION OF LIABILITY' %}</h3>
 
     <p>
-        {% trans 'We do not warrant or warrant that use of our service will be uninterrupted, timely, secure, or free of
+        {% blocktrans %}We do not warrant or warrant that use of our service will be uninterrupted, timely, secure, or free of
         mistakes.<br><br>
 
         We do not warrant that the results that may be obtained from the use of the service will be accurate or reliable.<br><br>
@@ -206,13 +206,13 @@
         (or product) published, transmitted or made available through the service, even if notice of its
         possibility. Because some states or jurisdictions do not allow the exclusion or limitation of liability
         for consequential or incidental damages, in such states or jurisdictions, our liability shall be limited to the
-        maximum allowed by law.' %}<br>
+        maximum allowed by law.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 12 - TERMINATION' %}</h3>
 
     <p>
-        {% trans 'Obligations and liabilities of the parties incurred prior to the termination date will survive
+        {% blocktrans %}Obligations and liabilities of the parties incurred prior to the termination date will survive
         upon termination of this agreement for all purposes.<br><br>
 
         These Terms of Service are effective unless and until terminated by either you or us. You can terminate these
@@ -222,19 +222,19 @@
         If, in our judgment, you do not comply, or are suspected of not complying, with any term or provision of these
         Terms of Service, we may also terminate this agreement at any time, without notice, and you will continue to
         being responsible for all amounts owed. To include the completion date; and/or accordingly we can
-        deny access to our services (or any part thereof).' %}<br>
+        deny access to our services (or any part thereof).{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 13 - CHANGES TO THE TERMS OF SERVICE' %}</h3>
 
     <p>
-        {% trans 'You can review the most recent version of the Terms of Service at any time on this page.<br><br>
+        {% blocktrans %}You can review the most recent version of the Terms of Service at any time on this page.<br><br>
 
         We reserve the right, at our sole discretion, to update, modify or replace any part of
         these Terms of Service by posting updates and changes to our website. Is his
         responsibility to check our website periodically to verify changes. Your continued use of or access to
         our website or the Service after the posting of any changes to these Terms of Service implies
-        acceptance of such changes.' %}<br>
+        acceptance of such changes.{% endblocktrans %}<br>
     </p>
 
     <h3>{% trans 'SECTION 14 - CONTACT INFORMATION' %}</h3>
