--- a/templates/order/order_details.html
+++ b/templates/order/order_details.html
@@ -18,7 +18,7 @@
             <h2>{% trans 'Order' %} #{{ order.id }}</h2>
         </div>
         <div class="body-order">
-            <h4 class="order-sections">{% trans 'Status:' %} <span class="order-status">{{ order.status }}</span></h4>
+            <h4 class="order-sections">{% trans 'Status:' %} <span class="order-status">{% trans order.status %}</span></h4>
             <!-- Order Tracking -->
             {% if order.order_tracking.first.tracking_link %}
             <h4 class="order-sections">{% trans 'Tracking Information:' %}</h4>
@@ -75,7 +75,7 @@
                     </tr>
                 </tbody>
             </table>
-            <h4 class="order-sections">{% trans 'Address:' %}</h4>
+            <h4 class="order-sections">{% trans 'Address' %}:</h4>
             <!-- Order Address -->
             <address>
                 <i>{{ order.order_address.first.name }}</i><br>
