--- a/templates/product/product.html
+++ b/templates/product/product.html
@@ -68,7 +68,7 @@
 				<strong class="increase-product">+</strong>
 			</div>
 			{% if product.stock == True and product.amount_stock > 0 %}
-			<p class="stock-store">{% blocktrans %}{{ product.amount_stock }} left in stock{% endblocktrans %}</p>
+			<p class="stock-store">{% blocktrans with amount_stock=product.amount_stock %}{{ amount_stock }} left in stock{% endblocktrans %}</p>
 			<button type="submit" class="btn-add-cart mt-4 mb-2 btn btn-primary">{% trans 'Add to cart' %}</button>
 			{% elif product.stock == True %}
 			<p class="stock-store">{% trans 'In stock' %}</p>
