--- a/templates/send_email/email-verification-user.html
+++ b/templates/send_email/email-verification-user.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% load i18n %}
 <html>
   <head>
     <style>
@@ -9,41 +11,41 @@
       }
       
       h1 {
-        font-size: 2.25em;
+        font-size: 2.25rem;
         color: #333;
-        margin-bottom: 1.25em;
+        margin-bottom: 1.25rem;
       }
       
       p {
-        font-size: 1.125em;
+        font-size: 1.125rem;
         color: #333;
-        margin-bottom: 1.25em;
+        margin-bottom: 1.25rem;
       }
       
       .logo {
         display: block;
         margin: 0 auto;
-        margin-bottom: 1.25em;
+        margin-bottom: 1.25rem;
       }
       
       .btn {
-        background-color: #3498db;
+        background-color: #ee0;
         color: #fff;
-        padding: 0.625em 1.25em;
-        border-radius: 0.3125em;
+        padding: 0.625em 1.25rem;
+        border-radius: 0.3125rem;
         text-decoration: none;
-        font-size: 1.125em;
+        font-size: 1.125rem;
         border: none;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <img src="http://127.0.0.1:8000/static/img/logo.png" alt="Logo del sitio web" class="logo">
-      <h1>Welcome to KatyShop303</h1>
-      <p>Please verify your email address by clicking the button below.</p>
+      <img src="{% static 'img/logo.png' %}" alt="website logo" class="logo">
+      <h1>{% trans 'Welcome to' %} KatyShop303</h1>
+      <p>{% trans 'Please verify your email address by clicking the button below.' %}</p>
 	  <p>{{message_context}}</p>
-      <a href="http://127.0.0.1:8000{{path_url}}" class="btn">{{btn_text}}</a>
+    <a href="http://127.0.0.1:8000{{path_url}}" class="btn">{{btn_text}}</a>
     </div>
   </body>
 </html>
