--- a/templates/user/Thanks-for-register.html
+++ b/templates/user/Thanks-for-register.html
@@ -13,11 +13,9 @@
     <div class="box-thanks">
         <img src="{% static 'img/thank_you.png' %}" alt="thank you">
         <p>
-            {% blocktrans %}
-            Thank you for registering on KatyShop303.<br> To log in you must activate your account
-            with the link that we have sent to your email.<br>
-            If you can't find the email in your main inbox, check your spam folder.
-            {% endblocktrans %}
+            {% blocktrans %}Thank you for registering on KatyShop303.<br> 
+            To log in you must activate your account with the link that we have sent to your email.<br>
+            If you can't find the email in your main inbox, check your spam folder.{% endblocktrans %}
         </p>        
         <a href="{% url 'user_app:user_resend_email' %}"><strong>{% trans 'Resend email' %}</strong></a>
     </div>
