Added missing translation of some sentences on the website

--- a/templates/user/change-password.html
+++ b/templates/user/change-password.html
@@ -25,7 +25,7 @@
         <label class="form-register__label"><img src="{% static 'img/icono-contraseña.svg' %}" alt="icon-password">
             {{form.repeat_password}}</label>
 
-        <input class="form-register__input-submit" type="submit" value="Change Password">
+        <input class="form-register__input-submit" type="submit" value="{% trans 'Change Password' %}">
     </form>
 </div class="container-form">
 
