--- a/templates/user/user-profile.html
+++ b/templates/user/user-profile.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load socialaccount %}
 {% load i18n %}
 
 {% block title %} user-dashboard {% endblock title %}
